# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
core/inc/: chip8.h  cpu.h  instructions.h  memory.h  rom.h  timers.h
core/src/: chip8.c  cpu.c  instructions.c  rom.c  timers.c
cube_ide/: .mxproject
cube_ide/Core/Src/: main.c  stm32f1xx_hal_msp.c
kicad/: chip8_emulator-job.gbrjob  chip8_emulator.kicad_pcb  chip8_emulator.kicad_prl  chip8_emulator.kicad_pro  chip8_emulator.kicad_sch-bak
pc/: CMakeLists.txt  main.c
platform/inc/: app.h  display.h  input.h  menu.h  platform.h  rom_catalog.h  rom_loader.h  sound.h  timing.h
platform/pc/: display.c  input.c  main.c  menu.c  rom_catalog.c  rom_loader.c  sound.c  timing.c
platform/src/: menu.c  platform_pc.c
platform/stm32/: app.c  display.c  input.c  rom_catalog.c  rom_loader.c  sound.c  timing.c
roms/: blinky.c  brix.c  connect_4.c  puzzle.c  space_invaders.c  tetris.c  tic_tac_toe.c
test/: test_opcode.c
